feat: enforce recursively portable Judgment metadata (M3)
Judgment construction now validates and freezes result metadata against the
portable value algebra instead of shallow-copying whatever a caller supplied.
Metadata accepts strings, booleans, interoperable integers, finite numbers,
arrays, and string-keyed objects, recursively; everything else is refused with
a message naming the exact value path. Accepted containers are copied and
recursively frozen in encounter order, so later mutation of a caller's map,
list, or array cannot alter a judgment that was already built.

Portability becomes a property of the constructed value rather than of caller
restraint: a consumer can no longer discover at serialization time that an
in-process judgment held a live Java object.

Result timing moves to the portable elapsedMillis convention. Judgment.elapsed()
is now a derived Duration.ofMillis(...) view over a non-negative integer and
returns null when timing is absent; the old "elapsed"/Duration key is refused at
construction and is not read as a fallback.

Two producers carried non-portable or Java-shaped result values and are
migrated:

- LabelJudgmentClassifier stored the live Usage record; it now stores the
  portable projection, omitting absent components.
- CommandJudge stored an ISO-8601 rendering of a Duration under "duration"; it
  now stores elapsedMillis.

Public Javadoc, the result package documentation, and the consumer migration
guide are reconciled with the unconditional guarantee.

Verified: 557 tests across the ten child modules, 0 failures; core coverage
95.63% lines and 92.99% branches. The M3 rejection guard was watched failing
before the fix.